--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev",
+    "build": "npm run css:prod && remix build",
+    "prebuild": "rimraf ./public/build \"./app/styles/**/*.css\"",
+    "dev": "concurrently \"npm run css:watch\" \"remix dev\"",
     "start": "remix-serve build",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "css:build": "postcss styles --base styles --dir app/styles",
+    "css:watch": "npm run css:build -- --watch",
+    "css:prod": "npm run css:build -- --env production"
   },
   "dependencies": {
     "@remix-run/node": "^1.15.0",
@@ -20,7 +24,14 @@
     "@remix-run/eslint-config": "^1.15.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "autoprefixer": "^10.4.14",
+    "concurrently": "^8.0.1",
+    "cssnano": "^6.0.0",
     "eslint": "^8.27.0",
+    "postcss": "^8.4.21",
+    "postcss-cli": "^10.1.0",
+    "postcss-import": "^15.1.0",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.8.4"
   },
   "engines": {
