--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "autoprefixer": "^10.4.14",
     "concurrently": "^8.0.1",
     "cssnano": "^6.0.0",
+    "daisyui": "^2.51.5",
     "eslint": "^8.27.0",
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
