--- a/package.json
+++ b/package.json
@@ -12,25 +12,26 @@
     "css:prod": "npm run css:build -- --env production"
   },
   "dependencies": {
-    "@remix-run/node": "^1.16.0",
-    "@remix-run/react": "^1.16.0",
-    "@remix-run/serve": "^1.16.0",
-    "firebase": "^9.21.0",
+    "@remix-run/node": "^1.16.1",
+    "@remix-run/react": "^1.16.1",
+    "@remix-run/serve": "^1.16.1",
+    "dotenv": "^16.0.3",
+    "firebase": "^9.22.0",
     "isbot": "^3.6.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.16.0",
-    "@remix-run/eslint-config": "^1.16.0",
-    "@types/react": "^18.2.2",
-    "@types/react-dom": "^18.2.3",
+    "@remix-run/dev": "^1.16.1",
+    "@remix-run/eslint-config": "^1.16.1",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "autoprefixer": "^10.4.14",
     "concurrently": "^8.0.1",
     "cssnano": "^6.0.1",
     "daisyui": "^2.51.6",
-    "eslint": "^8.39.0",
+    "eslint": "^8.40.0",
     "postcss": "^8.4.23",
     "postcss-cli": "^10.1.0",
     "postcss-import": "^15.1.0",
